feat: add social links and footer

--- a/my-homepage/src/app/app.component.css
+++ b/my-homepage/src/app/app.component.css
@@ -30,6 +30,8 @@
   .content__container:after, .content__container:before {
     position: absolute;
     top: 0;
+    display: flex;
+    flex-direction: column;
     color: #16a085;
     font-size: 42px;
     line-height: 40px;
@@ -61,7 +63,38 @@
     line-height: 40px;
     margin: 0;
   }
-  
+
+  .social-links {
+    display: flex;
+    flex-direction: row;
+    margin-top: 15%;
+    justify-content: space-evenly
+  }
+
+  .footer {
+    position: absolute;
+    top: calc(60% + 160px);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-family: 'Lato', sans-serif;
+  }
+
+  a:link {
+    color: black;
+}
+
+a:hover {
+  color: white;
+}
+a:visited {
+  color: black;
+}
+ 
+a:visited:hover {
+  color: grey;
+}
   @-webkit-keyframes opacity {
     0%, 100% {
       opacity: 0;
