--- a/my-homepage/src/app/app.component.html
+++ b/my-homepage/src/app/app.component.html
@@ -10,4 +10,24 @@
         {{contentItem}}</li>
     </ul>
   </div>
+  <div class="social-links">
+    <a href="mailto:guptachiranjeev.13@gmail.com" title="guptachiranjeev.13@gmail.com" target="_blank">
+      <i class="fas fa-envelope"></i>
+    </a>
+    <a href="https://www.linkedin.com/in/chiranjeev-gupta/" title="linkedin.com/in/chiranjeev-gupta" target="_blank">
+      <i class="fab fa-linkedin-in"></i>
+    </a>
+    <a href="https://www.facebook.com/cran.cg/" title="facebook.com/cran.cg" target="_blank">
+      <i class="fab fa-facebook"></i>
+    </a>
+    <a href="https://www.twitter.com/cran_cg/" title="twitter.com/cran_cg" target="_blank">
+      <i class="fab fa-twitter"></i>
+    </a>
+    <a href="https://www.github.com/cran-cg/" title="github.com/cran-cg" target="_blank">
+      <i class="fab fa-github"></i>
+    </a>
+  </div>
+</div>
+<div class="footer">
+    <p >Made with <i class="fas fa-heart red"></i> + <i class="fab fa-angular"></i> in India</p>
 </div>
