--- a/my-homepage/src/app/app.component.html
+++ b/my-homepage/src/app/app.component.html
@@ -1,14 +1,15 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="content">
-  <div class="content__container">
-    <p class="content__container__text">
-      Hi I am
-    </p>
+<div class="content__wrapper">
+  <div class="content">
+    <div class="content__container">
+      <span class="content__container__text">
+        Hi I am
+      </span>
 
-    <ul class="content__container__list">
-      <li class="content__container__list__item" *ngFor="let contentItem of contentList">
-        {{contentItem}}</li>
-    </ul>
+      <ul class="content__container__list">
+        <li class="content__container__list__item" *ngFor="let contentItem of contentList">
+          {{contentItem}}</li>
+        </ul>
   </div>
   <div class="social-links">
     <a href="mailto:guptachiranjeev.13@gmail.com" title="guptachiranjeev.13@gmail.com" target="_blank">
@@ -30,4 +31,5 @@
 </div>
 <div class="footer">
     <p >Made with <i class="fas fa-heart red"></i> + <i class="fab fa-angular"></i> in India</p>
+</div>
 </div>
