--- a/my-homepage/src/app/app.component.css
+++ b/my-homepage/src/app/app.component.css
@@ -1,66 +1,56 @@
 
   .content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    height: 160px;
-    overflow: hidden;
+    display: flex;
     font-family: 'Lato', sans-serif;
     font-size: 35px;
-    line-height: 40px;
+    line-height: 45px;
     color: #ecf0f1;
+    flex-direction: column;
+  }
+  .content__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 85%;
   }
   .content__container {
     font-weight: 600;
     overflow: hidden;
-    height: 40px;
+    height: 45px;
     padding: 0 40px;
+    display: flex;
   }
-  .content__container:before {
-    content: '[';
+  .content__container::before {
+    content: '<';
     left: 0;
   }
-  .content__container:after {
-    content: ']';
-    position: absolute;
-    right: 0;
+  .content__container::after {
+    content: ' />';
+    white-space: pre;
   }
   .content__container:after, .content__container:before {
-    position: absolute;
-    top: 0;
-    display: flex;
-    flex-direction: column;
     color: #16a085;
     font-size: 42px;
-    line-height: 40px;
-    -webkit-animation-name: opacity;
-    -webkit-animation-duration: 2s;
-    -webkit-animation-iteration-count: infinite;
+    line-height: 45px;
     animation-name: opacity;
-    animation-duration: 2s;
+    animation-duration: 3s;
     animation-iteration-count: infinite;
   }
   .content__container__text {
-    display: inline;
-    float: left;
-    margin: 0;
+   
   }
   .content__container__list {
-    margin-top: 0;
-    padding-left: 110px;
-    text-align: left;
+    all: unset;
     list-style: none;
-    -webkit-animation-name: change;
-    -webkit-animation-duration: 10s;
-    -webkit-animation-iteration-count: infinite;
+    text-align: left;
+    height: 180px;
+    margin-left: 8px;
     animation-name: change;
-    animation-duration: 10s;
+    animation-duration: 24s;
     animation-iteration-count: infinite;
   }
   .content__container__list__item {
-    line-height: 40px;
+    line-height: 45px;
     margin: 0;
   }
 
@@ -95,72 +85,26 @@ a:visited {
 a:visited:hover {
   color: grey;
 }
-  @-webkit-keyframes opacity {
-    0%, 100% {
+@keyframes opacity {
+
+    12.5%, 25%, 75%, 87.5%, 37.5%, 62.5%, 50% {
       opacity: 0;
     }
-    50% {
-      opacity: 1;
+}
+@keyframes change {
+
+    12.5%, 87.5% {
+      transform: translateY(0)
     }
-  }
-  @-webkit-keyframes change {
-    0%, 12.66%, 100% {
-      -webkit-transform: translate3d(0, 0, 0);
-              transform: translate3d(0, 0, 0);
+    25%, 75% {
+      transform: translateY(-25%);
     }
-    16.66%, 29.32% {
-      -webkit-transform: translate3d(0, -25%, 0);
-              transform: translate3d(0, -25%, 0);
-    }
-    33.32%,45.98% {
-      -webkit-transform: translate3d(0, -50%, 0);
-              transform: translate3d(0, -50%, 0);
-    }
-    49.98%,62.64% {
-      -webkit-transform: translate3d(0, -75%, 0);
-              transform: translate3d(0, -75%, 0);
-    }
-    66.64%,79.3% {
-      -webkit-transform: translate3d(0, -50%, 0);
-              transform: translate3d(0, -50%, 0);
-    }
-    83.3%,95.96% {
-      -webkit-transform: translate3d(0, -25%, 0);
-              transform: translate3d(0, -25%, 0);
-    }
-  }
-  @keyframes opacity {
-    0%, 100% {
-      opacity: 0;
+    37.5%, 62.5% {
+      transform: translateY(-50%);
     }
     50% {
-      opacity: 1;
+      transform: translateY(-75%);
     }
-  }
-  @keyframes change {
-    0%, 12.66%, 100% {
-        -webkit-transform: translate3d(0, 0, 0);
-                transform: translate3d(0, 0, 0);
-      }
-      16.66%, 29.32% {
-        -webkit-transform: translate3d(0, -25%, 0);
-                transform: translate3d(0, -25%, 0);
-      }
-      33.32%,45.98% {
-        -webkit-transform: translate3d(0, -50%, 0);
-                transform: translate3d(0, -50%, 0);
-      }
-      49.98%,62.64% {
-        -webkit-transform: translate3d(0, -75%, 0);
-                transform: translate3d(0, -75%, 0);
-      }
-      66.64%,79.3% {
-        -webkit-transform: translate3d(0, -50%, 0);
-                transform: translate3d(0, -50%, 0);
-      }
-      83.3%,95.96% {
-        -webkit-transform: translate3d(0, -25%, 0);
-                transform: translate3d(0, -25%, 0);
-      }
+
   }
   
